<resources>
    <string name="app_name">REP</string>
    <string name="title_home">Home</string>
    <string name="title_consumption">소비 분석</string>
    <string name="title_diet">식단 관리</string>
    <string name="title_board">게시판</string>
    <string name="title_settings">설정</string>
    <string name="title_refrigerator">My 냉장고</string>
    <string name="title_basket">장바구니</string>
    <string name="title_calendar">달력</string>
    <string name="title_cooking">요리추천</string>
    <string name="title_favorite">좋아하는 재료</string>
</resources>
