<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/toolbar_navigation"
    app:startDestination="@id/nav_home"
   >
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lob.UI.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
    android:id="@+id/nav_refrigerator"
    android:name="com.example.lob.UI.refrigerator.RefrigeratorFragment"
    android:label="@string/title_refrigerator"
    tools:layout="@layout/refrigerator_fragment" />

    <fragment
        android:id="@+id/nav_basket"
        android:name="com.example.lob.UI.basket.BasketFragment"
        android:label="@string/title_basket"
        tools:layout="@layout/basket_fragment" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.lob.UI.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/calendar_fragment" />

    <fragment
        android:id="@+id/nav_cooking"
        android:name="com.example.lob.UI.cooking.CookingFragment"
        android:label="@string/title_cooking"
        tools:layout="@layout/cooking_fragment" />
    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.lob.UI.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/favorite_fragment" />
</navigation>