<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title=  "@string/title_home" />

    <item
        android:id="@+id/menu_consumption"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_consumption" />

    <item
        android:id="@+id/menu_diet"
        android:icon="@drawable/ic_restaurant_menu_black_24dp"
        android:title="@string/title_diet" />

    <item
        android:id="@+id/menu_board"
        android:icon="@drawable/ic_content_paste_black_24dp"
        android:title="@string/title_board" />
    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_setting" />

</menu>
