<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/menu_home">

    <fragment
        android:id="@+id/menu_home"
        android:name="com.example.lob.UI.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/menu_consumption"
        android:name="com.example.lob.UI.consumption.ConsumptionFragment"
        android:label="@string/title_consumption"
        tools:layout="@layout/fragment_consumption" />

    <fragment
        android:id="@+id/menu_diet"
        android:name="com.example.lob.UI.diet.DietFragment"
        android:label="@string/title_diet"
        tools:layout="@layout/fragment_diet" />

    <fragment
        android:id="@+id/menu_board"
        android:name="com.example.lob.UI.board.BoardFragment"
        android:label="@string/title_board"
        tools:layout="@layout/fragment_board" />
    <fragment
        android:id="@+id/menu_setting"
        android:name="com.example.lob.UI.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_setting" />

</navigation>
